<resources>
    <string name="app_name">Travel Planner</string>
    <string name="sac_state_logo">Sac State Logo</string>

    <!--You are able to have strings that span multiple lines without changing the text-->
    <string name="app_string_info">
        What is this app about? Every year there is tons of traffic at Sac State. The goal of this app is to reduce traffic
        and show you alternative modes of transportation. This can help reduce traffic, carbon emissions, and reduce strain on your wallet.
    </string>
    <string name="go">Start</string>
    <string name="skip">Skip</string>
    <string name="car">car</string>
    <string name="user_agreement">I agree to <u><i>terms and conditions</i></u></string>
    <string name="user_agreement_text">This is where the terms and conditions will go. it may be long so the user can scroll down
    This is where the terms and conditions will go. it may be long so the user can scroll down
    This is where the terms and conditions will go. it may be long so the user can scroll down
    This is where the terms and conditions will go. it may be long so the user can scroll down
    This is where the terms and conditions will go. it may be long so the user can scroll down
    This is where the terms and conditions will go. it may be long so the user can scroll down
    This is where the terms and conditions will go. it may be long so the user can scroll down
    This is where the terms and conditions will go. it may be long so the user can scroll down
    This is where the terms and conditions will go. it may be long so the user can scroll down </string>

    <string name="address_prompt">Please enter in your home address above. This is to help us find what
        modes of transportation will work best for you. You may put a general location if you don\'t
        want to put your actual address, but that will reduce the accuracy of our recommendations for you.</string>
    <string name="vehicle_btn_bckgrnd_des">image of whichever type this button will send user to</string>
    <string name="select">Select</string>
    <string name="menu_to_survey">Finish tour</string>
    <string name="menu_info">Here are the different ways you can commute to Sac State. Click \"Compare\"
        if you want to compare the different modes of transportation with each other. \nWe recommend you do
        that after viewing the different modes of. When you are done, please select finish tour to take
        our survey. You may come back to this information at any time possible
    </string>
    <string name="menu_to_compare">Compare transportation</string>
    <string name="gradient">gradient</string>
    <string name="about_this_app">About this App</string>
    <string name="survey_prompt">Thank you for using our app! We hope you\'ve been able to make wiser
        decisions on your travel plans to Sacramento State. Please take our survey so we may refine
        this experience for future users.</string>
    <string name="background">background</string>
    <string name="vehicle_type_4_txt">electric</string>
    <string name="vehicle_type_3_txt">hybrid</string>
    <string name="vehicle_type_2_txt">rideshare</string>
    <string name="vehicle_type_1_txt">normal</string>
    <string name="vehicle_info_description">vehicle description, why you should use this vehicle, about 4–5 lines of text max</string>
    <string name="vehicle_cost_description">Cost</string>
    <string name="vehicle_cost_info_description">gas: \ninsurance:\netc: \nper person: (if rideshare)\nAverage cost(min - max): avg cost</string>
    <string name="vehicle_emissions_description">carbon emissions</string>
    <string name="vehicle_distance_description">distance</string>
    <string name="display_map_prompt">STARTING POSITION:</string>
    <string name="from_home">From home</string>
    <string name="from_sac_state">From Sac State</string>
    <string name="compare_this">compare this</string>
    <string name="display_to_survey">Finish my tour</string>
    <string name="show_next_option">Show next option</string>

    <string name="pros">Pros:</string>
    <string name="cons">Cons:</string>
    <string name="reduces_traffic_congestion">~Reduces Traffic Congestion</string>
    <string name="electric_cars">Electric cars are more environmentally friendly as it produces no carbon emissions. EV Charging Stations are available on campus.</string>
    <string name="electric_vehicles_ev">Electric Vehicles (EV):</string>
    <string name="carpooling_allows_you_to_share_the_costs_with_a_friend_csus_offers_carpooling_permits_and_prime_parking_spaces">Carpooling allows you to share the costs with a friend. CSUS offers carpooling permits and prime parking spaces.</string>
    <string name="carpooling">Carpooling:</string>
    <string name="the_toxic_remains_of_its_battery_plastics_are_placed_into_landfills">~The toxic remains of its battery/plastics are placed into landfills.</string>
    <string name="carbon_emissions_emitted">~Carbon Emissions Emitted</string>
    <string name="traffic_congestion">~Traffic Congestion</string>
    <string name="flexibility_used_at_one_s_convenience">~Flexibility: Used at One’s Convenience</string>
    <string name="availability">~Availability</string>
    <string name="option_to_carpool">~Option to Carpool</string>
    <string name="reduces_air_pollution">~Reduces Air Pollution</string>
    <string name="limited_capacity">~Limited Capacity</string>
    <string name="possible_time_constraints_e_g_delays_schedule_conflicts">~Possible Time Constraints (e.g delays, schedule conflicts)</string>
    <string name="additional_information">Additional Information</string>
    <string name="bus_services">Bus Services:</string>
    <string name="estimated_to_save_over_1_4_billion_gallons_of_gas">~Estimated to save over 1.4 billion gallons of gas</string>
    <string name="estimated_to_decrease_carbon_dioxide_emissions_by_1_5_million_tons_each_year">~Estimated to decrease carbon dioxide emissions by 1.5 million tons each year</string>
    <string name="csus_shuttle_services">CSUS Shuttle Services:</string>
    <string name="a_convenient_way_to_get_around_campus_available_for_any_student_or_employee_with_their_onecard_present">A convenient way to get around campus. Available for any student or employee with their OneCard present.</string>

    <string name="jump_bikes_are_available_all_around_sac_state_s_campus">Jump Bikes are available all around Sac State\'s Campus!</string>
    <string name="if_you_replace_a_car_with_a_bike_each_time_you_go_to_work_you_will_save_approximately_3000_pounds_of_greenhouse_gas_emissions_each_year">“If you replace a car with a bike each time you go to work, you will save approximately 3000 pounds of greenhouse gas emissions each year.”</string>
    <string name="weather_interference">~Weather Interference</string>
    <string name="service_area_boundaries">~Service Area Boundaries</string>
    <string name="limited_availability">~Limited Availability</string>
    <string name="able_to_locate_closest_available">~Able to Locate Closest Available</string>
    <string name="maintenance_not_required">~Maintenance Not Required</string>
    <string name="option_to_reserve">~Option to reserve</string>
    <string name="take_the_survey">Take the Survey</string>
    <string name="time">time</string>

    <string name="bikedyk">There are multiple bike cages at Sac State that always under supervision all day.</string>
    <string name="motorcycledyk">There\'s plenty of motorcycle parking it has low walk distances to class.</string>
    <string name="walkdyk">Walking is great to do! There\'s a lot of footpaths to get to Sac State.</string>

    <string name="radio_button_prompt">Select the following to see the different types:</string>
    <string name="scroll_bottom_prompt">
        Click \"Next\" to see the next mode of transportation.
        \nClick \"Compare\" to compare the different modes of transportation.
        \nClick \"Finish\"if you think you have decided what you want to use to travel with
    </string>

    <string name="car_description">The standard way to commute, but not the most affordable.</string>
    <string name="motorcycle_description">CSUS offers cost efficient permits for this compact mode of
        transportation.</string>
    <string name="transit_description">Public transportation services across Sacramento county.</string>
    <string name="bike_description">CSUS has a bike shop that carries spare parts for your bike and offers
        repair services.</string>
    <string name="walk_description">A simple and harmless way to commute at your leisure.</string>
    <string name="jump_bike_description">The electric bicycle sharing system you could rent anytime.</string>

    <string name="car_info">The most common form of transportation. Commuting via car is one of the
        most convenient modes of transportation for college students.</string>
    <string name="motorcycle_info">This mode of transportation helps reduce traffic congestion and CSUS
        campus has multiple motorcycle parking lots.</string>
    <string name="transit_info">Sacramento Regional Transit is accessible and affordable for everyone.
        They provide bus, light rail, shuttle and para transit services. It\'s services extend to
        Citrus Heights, Elk Grove, Folsom and Rancho Cordova. As a Sac State Student, access to RT is
        included in your tuition, known as the Sac State Student Commuter.</string>
    <string name="bike_info">A convenient mode of transportation that doesn\'t harm the environment
        and provides health benefits. CSUS campus has multiple bike compounds and provides bike
        locker rentals.</string>
    <string name="walk_info">A free and easy mode of transportation that causes no harm to the
        environment and improves one\'s health.</string>
    <string name="jump_bike_info">The electric bicycle sharing system you could rent anytime.</string>
    <string name="pro">Pros</string>
    <string name="con">Cons</string>
    <string name="compare_two_modes_of_transportation_with_each_other">Compare Two modes of transportation with each other</string>
    <string name="choose_which_atribute_to_compare">Choose which atribute to compare:</string>
    <string name="distance">distance</string>
    <string name="emissions">emissions</string>
    <string name="cost">cost</string>
    <string name="here_are_your_travel_options">Here are your travel options</string>

    <string-array name="vehicle_array_subtypes">
        <item>car</item>
        <item>ride share</item>
        <item>hybrid car</item>
        <item>electric car</item>
        <item>bike</item>
        <item>electric bike</item>
        <item>jump bike</item>
        <item>transit</item>
        <item>motorcycle</item>
        <item>electric motorcycle</item>
        <item>walk</item>
    </string-array>

    <string-array name="vehicle_array">
        <item>Car</item>
        <item>Bike</item>
        <item>Transit</item>
        <item>Motorcycle</item>
        <item>Walk</item>
    </string-array>
</resources>
