<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.vehiclefragments.TransitFragment">
    
    
   <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/transit_image_two" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="590dp"
        android:scaleType="centerCrop"
        android:src="@drawable/transit_image_one" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="170dp"
        android:layout_marginRight="211dp"
        android:background="#043927"
        android:gravity="center_horizontal"
        android:text="@string/pros"
        android:textAlignment="center"
        android:textColor="#f0e1b0"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:layout_marginEnd="211dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/reduces_traffic_congestion"
        android:layout_marginTop="200dp"
        android:gravity="center_vertical"
        android:textColor="#f0e1b0"
        android:textSize="15sp"
        android:layout_marginRight="210dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="210dp"
        android:layout_marginStart="5dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/reduces_air_pollution"
        android:layout_marginTop="250dp"
        android:textColor="#f0e1b0"
        android:textSize="15sp"
        android:layout_marginRight="210dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="210dp"
        android:layout_marginStart="5dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="203dp"
        android:background="#043927"
        android:text="@string/cons"
        android:textStyle="bold|italic"
        android:textColor="#f0e1b0"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_marginStart="203dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="220dp"
        android:text="@string/limited_capacity"
        android:textColor="#f0e1b0"
        android:gravity="center_vertical"
        android:textSize="15sp"
        android:layout_marginStart="220dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="220dp"
        android:text="@string/possible_time_constraints_e_g_delays_schedule_conflicts"
        android:textColor="#f0e1b0"
        android:gravity="center_vertical"
        android:textSize="15sp"
        android:layout_marginStart="220dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_marginTop="373dp"
        android:background="#043927"
        android:text="@string/additional_information"
        android:textStyle="bold"
        android:textColor="#f0e1b0"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="405dp"
        android:layout_marginLeft="10dp"
        android:text="@string/bus_services"
        android:gravity="center_vertical"
        android:textColor="#f0e1b0"
        android:textSize="15sp"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="430dp"
        android:layout_marginLeft="20dp"
        android:text="@string/estimated_to_save_over_1_4_billion_gallons_of_gas"
        android:gravity="center_vertical"
        android:textColor="#f0e1b0"
        android:textSize="15sp"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="455dp"
        android:layout_marginLeft="20dp"
        android:text="@string/estimated_to_decrease_carbon_dioxide_emissions_by_1_5_million_tons_each_year"
        android:gravity="center_vertical"
        android:textColor="#f0e1b0"
        android:textSize="15sp"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="505dp"
        android:layout_marginLeft="10dp"
        android:text="@string/csus_shuttle_services"
        android:gravity="center_vertical"
        android:textColor="#f0e1b0"
        android:textSize="15sp"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="530dp"
        android:layout_marginLeft="20dp"
        android:text="@string/a_convenient_way_to_get_around_campus_available_for_any_student_or_employee_with_their_onecard_present"
        android:gravity="center_vertical"
        android:textColor="#f0e1b0"
        android:textSize="15sp"
        android:layout_marginStart="20dp" />

</FrameLayout>
