<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.ComparisonActivity">

    <TextView
        android:id="@+id/comparisonTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/trajan_pro_bold"
        android:text="@string/compare_two_modes_of_transportation_with_each_other"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="24sp" />

        <Spinner
            android:id="@+id/comparisonOption"
            android:layout_width="393dp"
            android:layout_height="48dp"
            android:entries="@array/vehicle_array_subtypes"
            android:spinnerMode="dropdown"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/comparisonOption2"
            android:layout_width="393dp"
            android:layout_height="48dp"
            android:entries="@array/vehicle_array_subtypes"
            android:spinnerMode="dropdown"
            android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="397dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/choose_which_atribute_to_compare"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/comparisonMode"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@color/redwoodGroveGreen"
            android:orientation="horizontal"
            android:padding="3dp">

            <RadioButton
                android:id="@+id/compareByCost"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/colorWhite"
                android:checked="true"
                android:text="@string/cost"
                android:textColor="@color/colorWhite" />

            <RadioButton
                android:id="@+id/compareByEmissions"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/colorWhite"
                android:text="@string/emissions"
                android:textColor="@color/colorWhite" />

            <RadioButton
                android:id="@+id/compareByDistance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/colorWhite"
                android:text="@string/distance"
                android:textColor="@color/colorWhite" />

        </RadioGroup>

        <com.jjoe64.graphview.GraphView
            android:id="@+id/comparisonGraph"
            android:layout_width="347dp"
            android:layout_height="271dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/comparisonToSurvey"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:background="@color/redMaple"
        android:fontFamily="@font/trajan_pro_bold"
        android:text="@string/display_to_survey"
        android:textColor="@color/colorWhite" />

</LinearLayout>